tests/integration/errors/passive-errdefer.orng
// 121
fn main() -> Int
    let mut x = 10
    let mut y = 10
    f(&mut x, true)
    f(&mut y, false)
    x + y

fn f(x: &mut Int, fail: Bool)->()!()
    errdefer x^ += 9
    x^ = 6
    if fail
        errdefer x^ += 100
        (.err <- ())
    else    
        (.ok <- ())